--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> -->
 </head>
@@ -15,7 +16,7 @@
             <div class="container"> 
                 <header> 
                     <ul class="nav sidebar"> 
-                        <li class="brands" onclick="hidesidebar()"><a href="#"><img src="./arrow_back_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="arrow back"></a></li>
+                        <li class="brands" onclick="hidesidebar()"><a href="#"><i class="fa-solid fa-arrow-left"></i></a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Home</a></li> 
                         <li class="nav-item"><a href="#" class="nav-link">Features</a></li> 
                         <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li> 
@@ -29,7 +30,7 @@
                         <li class="nav-item none"><a href="#" class="nav-link">Pricing</a></li> 
                         <li class="nav-item none"><a href="#" class="nav-link">FAQs</a></li> 
                         <li class="nav-item none"><a href="#" class="nav-link">About</a></li>
-                        <li class="hide" onclick="showsidebar()"><a href="#"><img src="./menu_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="sidebar"></a></li> 
+                        <li class="hide" onclick="showsidebar()"><a href="#"><i class="fa-solid fa-bars"></i></a></li> 
                     </ul> 
                 </header> 
             </div>
